Solved notes bug. It will now be cut off. and if the window size is big enough, it will show more.

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -3,9 +3,9 @@
 }
 
 .label {
-    -fx-font-size: 17pt;
+    -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
-    -fx-text-fill: #555555;
+    -fx-text-fill: #2291da;
     -fx-opacity: 0.9;
 }
 
@@ -92,18 +92,14 @@
     -fx-padding: 0 0 0 0;
 }
 
-.list-cell .label {
-    -fx-text-fill: #010504;
-}
-
 .cell_big_label {
-    -fx-font-size: 16px;
+    -fx-font-size: 24px;
     -fx-text-fill: #010504;
 }
 
 .cell_small_label {
-    -fx-font-size: 11px;
-    -fx-text-fill: #010504;
+    -fx-font-size: 14px;
+    -fx-text-fill: #2291da;
 }
 
 .anchor-pane {
